opam-version: "2.0"
name: "rocqducers"
version: "0.1.0"
synopsis: "Formally verified functions extracted from Rocq to JavaScript via Melange"
maintainer: []
authors: []
license: "MIT"
depends: [
  "ocaml" {>= "5.2.0"}
  "dune" {>= "3.21"}
  "melange"
  "rocq-core"
  "rocq-stdlib"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install" "@melange"]
]
