(rocq.extraction
 (prelude Extract)
 (extracted_modules PickList Loader AsyncButton UndoTree StateHistory TokenPaginator Datatypes)
 (theories Stdlib Rocqducers))

(library
 (name extracted)
 (modes melange)
 (flags (:standard -w -33))
 (modules PickList Loader AsyncButton UndoTree StateHistory TokenPaginator Datatypes))
